<resources>
    <string name="app_name">PecoMobile</string>
    <string name="title_home">Home</string>
    <string name="title_cards">My Cards</string>
    <string name="title_cabinet">My cabinet</string>
    <string name="title_maps">Maps</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_idno">IDNO</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_telephone">Telefon</string>
    <string name="prompt_Pin">Pin</string>
</resources>
