<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:enabled="true"
        android:id="@+id/navigation_home"
        android:icon="@drawable/account_white_36dp"
        android:title="@string/title_home"
        app:showAsAction="always"
        />

    <item
        android:enabled="true"
        android:id="@+id/navigation_cards"
        android:icon="@drawable/credit_card_black_24dp"
        android:title="@string/title_cards"
        app:showAsAction="always"/>
    <item
        android:enabled="false"
        android:id="@+id/navicenter"
        android:title=""/>

    <item
        android:enabled="true"
        android:id="@+id/navigation_cabinet"
        android:icon="@drawable/account_white_36dp"
        android:title="@string/title_cabinet"
        app:showAsAction="always"/>
    <item
        android:enabled="true"
        android:id="@+id/navigation_maps"
        android:icon="@drawable/account_white_36dp"
        android:title="@string/title_maps"
        app:showAsAction="always"/>
</menu>
